adding changes autocomplete from bill loading

--- a/src/app/administration/bill-loading/bill-loading.component.css
+++ b/src/app/administration/bill-loading/bill-loading.component.css
@@ -33,9 +33,9 @@ h3,h6{
   width: 300px;
 }
 
-.ng-autocomplete {
-  width:50%;
+/* .ng-autocomplete {
+  width:85%;
   max-width: 300px;
   display: table;
-  margin: 0 auto;
-}
+   margin: 0 auto;
+} */
