individual issuance broker corrected

--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -349,7 +349,7 @@
                     </div>
                   </div>
                   <div class="button" *ngIf="bemitir">
-                    <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Emitir Poliza</button>
+                    <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="DownloadData()">Descargar Recibo</button>
                   </div>
                   <div class="button" *ngIf="bpagomanual">
                     <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="addPayment()">Pago Manual</button>
