--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -282,7 +282,7 @@
                     <div class="form-outline">
                       <label class="form-label required" for="form3Examplev4">Plan de RCV</label>
                       <select formControlName="cplan" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cplan').errors }" (change)="ValidationPlan()">
-                        <option *ngFor="let plan of planList" value="{{ plan.id }}">{{ plan.value }}</option>
+                        <option *ngFor="let plan of planList" value="{{ plan.control }}">{{ plan.value }}</option>
                       </select>
                       <div *ngIf="submitted && search_form.get('cplan').errors" class="invalid-feedback">
                         <div *ngIf="search_form.get('cplan').errors.required">Se requiere completar el campo</div>
@@ -312,7 +312,7 @@
                   <div class="col-md-4 mb-4 pb-2" *ngIf="!plan"><!--- -->
                     <div class="form-outline">
                       <label class="form-label required">Frecuencia de Pago</label>
-                      <select formControlName="cmetodologiapago" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmetodologiapago').errors }" >
+                      <select formControlName="cmetodologiapago" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmetodologiapago').errors }" (change)="OperationUbii()">
                         <option></option>
                         <option *ngFor="let metodologia of metodologiaList" value="{{ metodologia.id  }}">{{ metodologia.value }}</option>
                       </select>
@@ -348,9 +348,9 @@
                       <input type="number" formControlName="ncobro" class="form-control form-control-lg" readonly=readonly [ngClass]="{ 'is-invalid' : submitted && search_form.get('ncobro').errors }" />
                     </div>
                   </div>
-                  <div class="button" *ngIf="bemitir">
+                  <!-- <div class="button" *ngIf="bemitir">
                     <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Emitir Poliza</button>
-                  </div>
+                  </div> -->
                   <div class="button" *ngIf="bpagomanual">
                     <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="addPayment()">Pago Manual</button>
                   </div>
