--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -279,7 +279,7 @@
                   <div class="form-outline">
                     <label class="form-label required" for="form3Examplev4">Plan de RCV</label>
                     <select formControlName="cplan" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cplan').errors }" (change)="functio()">
-                      <option *ngFor="let plan of planList" value="{{ plan.id }}">{{ plan.value }}</option>
+                      <option *ngFor="let plan of planList" value="{{ plan.control }}">{{ plan.value }}</option>
                     </select>
                     <div *ngIf="submitted && search_form.get('cplan').errors" class="invalid-feedback">
                       <div *ngIf="search_form.get('cplan').errors.required">Se requiere completar el campo</div>
@@ -464,6 +464,12 @@
                     </div>
                   </div>
                 </div>
+                <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
+                  <div class="form-outline">
+                    <label class="form-label required" for="form3Examplev5">Monto Total</label>
+                    <input type="number" formControlName="ncobro" class="form-control form-control-lg" readonly=readonly [ngClass]="{ 'is-invalid' : submitted && search_form.get('ncobro').errors }" />
+                  </div>
+                </div>
               <!--  <div class="col-md-2 mb-4 pb-2">
                   <div class="form-outline">
                     <label class="form-label required" for="form3Examplev4">Fecha desde (Poliza)</label>
@@ -509,10 +515,10 @@
                   </div> 
               </div>
                 <div class="button">
-                  <button [disabled]="loading || !clear" type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">
+                  <!-- <button [disabled]="loading || !clear" type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Emitir Póliza-Recibo
-                  </button>
+                  </button> -->
                   <button type="button" class="btn btn-light btn-lg" style="background-color: red;" (click)="onClearForm()">Limpiar Formulario</button>
                 </div> 
               </div> 
