--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.css
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.css
@@ -1,5 +1,6 @@
 .containerr{
     width: 100%;
+    max-width: 95%;
 }
 
 .bread{
@@ -25,7 +26,9 @@ h2{
 .col-lg-4{
     padding: 10px;
 }
-
+.col-lg-6{
+    border-right-style: inset;
+  }
 form{
     padding: 40px;
 }
