--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -424,11 +424,11 @@
                   </div>
                   <div class="button" *ngIf="bemitir">
                     <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Emitir Poliza</button>
-                  </div> -->
+                  </div> 
                   <div class="button" *ngIf="bpagomanual">
                     <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="addPayment()">Pago Manual</button>
                   </div>
-                  <!-- <div class="col-sm-12 mt-2" *ngIf="bpagarubii">
+                   <div class="col-sm-12 mt-2" *ngIf="bpagarubii">
                     <div class="button">
                         <button id="ubiiboton" (click)="onSubmit(search_form.value)"></button>
                     </div> 
