--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -1,4 +1,4 @@
-
+<app-toolbar></app-toolbar>
 <div class="container">
   <div class="row mt-5" *ngIf="alert.show">
       <div class="col-sm-12 col-md-6 mx-auto">
